--- a/source/template/src/chat/body/dialog.pug
+++ b/source/template/src/chat/body/dialog.pug
@@ -3,7 +3,7 @@
 		.set__users
 			.set__users-icon.
 				icon
-			.set__user-time.
+			.set__users-time.
 				2121
 		.set__message.
 			Hay
@@ -14,9 +14,9 @@
 		.get__users
 			.get__users-icon.
 				icon
-			.get__user-time.
+			.get__users-time.
 				2121
 	form(action="")
 		input(type="textarea" name="inputMSG")
-		button() 
-			img(src="")
+		.button 
+			img(src="http://snapchat-download.net/wp-content/uploads/2015/10/snapchat-blue-arrow-icon-mean.png")
