--- a/source/template/src/chat/body/infoAboutInterlocutor.pug
+++ b/source/template/src/chat/body/infoAboutInterlocutor.pug
@@ -1,9 +1,10 @@
 .infoAboutInterlocutor
 	.user__avatar
-		span AVATAR
+		span 
+			img(src="https://static.pexels.com/photos/289225/pexels-photo-289225.jpeg")
 	.user__nickName
-		span What
+		span Nicka
 	.user__phone
-		span What
+		span 09x-xxx-xx-xx
 	.user__gender
-		span What
+		span Female
