--- a/source/styles/src/chat/dialogs/dialogs.styl
+++ b/source/styles/src/chat/dialogs/dialogs.styl
@@ -20,6 +20,9 @@
 			
 			grid-area: users;
 			
+			&-time
+				font-size: 0.7em;
+			
 			/*width and height by JS*/
 		&__message
 			grid-area: message;
@@ -42,7 +45,10 @@
 		margin: 0;
 		// float: right;
 		// background-color: yellow;
-		
+		&__users
+			
+			&-time
+				font-size: 0.7em;	
 		&__message
 			background-color: rgb(7, 91, 65);
 			border-radius: 3px;
@@ -59,12 +65,25 @@
 			width: calc(100% - 60px);
 			height: 30px;
 			// opacity: 1;
-			// background-color: grey ;
+			background-color: rgb(30, 114, 48) ;
 			color: white;
+			border: none;
+			border-radius: 2px;
 		
-		button
+		.button
 			margin-left: 15px;
-			// margin-top: -120px;
+			// margin-top: 5px;
 			width: 30px;
 			height: 30px;;
-			border-radius: 2px;		
+			border-radius: 2px;	
+			background-color: rgba(66, 244, 244,0.8);
+			text-align: center;
+			border: none;
+			border-radius: 5px;	
+			float: right;
+			// padding-top: px ;
+				
+			img 
+				margin-top: 5px;
+				width: 20px;
+				height: 20px;
