--- a/source/styles/src/chat/userInfo/userInfo.styl
+++ b/source/styles/src/chat/userInfo/userInfo.styl
@@ -10,3 +10,12 @@
 	background-color:rgb(20, 82, 147);
 	box-shadow: -3px -2px (rgb(23, 100, 181));
 	box-sizing: border-box;
+	
+	.user
+		&__avatar
+		span
+			margin-top: 5%;
+			img
+				border-radius: 50%;
+				width: 100px;
+				height: 100px;
