--- a/source/template/src/chat/body/dialog.pug
+++ b/source/template/src/chat/body/dialog.pug
@@ -1,8 +1,8 @@
 .dialog
 	.set
 		.set__users
-			.set__users-icon.
-				icon
+			.set__users-icon
+				img(src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhugnVnCHDVm0bPZkuOy6vqAPMN1HwekMfYgTJygbxHBWLzJZJ")
 			.set__users-time.
 				2121
 		.set__message.
@@ -12,8 +12,8 @@
 		.get__message.
 			Hello
 		.get__users
-			.get__users-icon.
-				icon
+			.get__users-icon
+				img(src="https://i.pinimg.com/736x/75/85/eb/7585eb6170954930e8c320bafc3e248d--short-girl-hairstyles-short-hair-girls.jpg")
 			.get__users-time.
 				2121
 	form(action="")
