--- a/source/template/src/chat/body/infoAboutInterlocutor.pug
+++ b/source/template/src/chat/body/infoAboutInterlocutor.pug
@@ -1,10 +1,14 @@
 .infoAboutInterlocutor
-	.user__avatar
-		span 
-			img(src="https://static.pexels.com/photos/289225/pexels-photo-289225.jpeg")
-	.user__nickName
-		span Nicka
-	.user__phone
-		span 09x-xxx-xx-xx
-	.user__gender
-		span Female
+	.user
+		.user__avatar
+			span 
+				img(src="https://static.pexels.com/photos/289225/pexels-photo-289225.jpeg")
+		.user__nickName
+			span Nick:
+				span Nicka
+		.user__phone
+			span Telephone:
+				span 09x-xxx-xx-xx
+		.user__gender
+			span Gender: 
+				span Female
