--- a/source/styles/src/chat/dialogs/dialogs.styl
+++ b/source/styles/src/chat/dialogs/dialogs.styl
@@ -16,10 +16,18 @@
 		grid-template-areas: "users message";
 
 		&__users
-			padding: 5% 0 ;
+			padding: 3% 0 ;
 			
 			grid-area: users;
 			
+			&-icon
+				width: 40px;
+				height: 40px;
+				margin-left: -10px;
+				img
+					width: 40px;
+					height: 40px;
+					border-radius: 40%;
 			&-time
 				font-size: 0.7em;
 			
@@ -37,7 +45,7 @@
 			
 	.get
 		display: grid;
-		grid-template-columns: auto 15%;
+		grid-template-columns: 80% 15%;
 		grid-column-gap: 5%;
 		width: 100%;
 		text-align: right;
@@ -46,9 +54,20 @@
 		// float: right;
 		// background-color: yellow;
 		&__users
-			
+			float: right;
 			&-time
-				font-size: 0.7em;	
+				font-size: 0.7em;
+				float: right;	
+			&-icon
+				// float: right;
+				padding-left: 50%;
+				width: 40px;
+				height: 40px;
+			
+				img 
+					width: 40px;
+					height: 40px;
+					border-radius: 40%;
 		&__message
 			background-color: rgb(7, 91, 65);
 			border-radius: 3px;
