--- a/source/styles/src/chat/userInfo/userInfo.styl
+++ b/source/styles/src/chat/userInfo/userInfo.styl
@@ -1,21 +1,43 @@
 .infoAboutInterlocutor
 	text-align: center;
-	
-	display: grid;
-	//4 rows
-	grid-template-rows: 30% 20% 20% 20%;
-	grid-template-columns: 1fr;
+	height: 100%;
+	// display: grid;
+	// //4 rows
+	// grid-template-rows: 30% 10% 10% 10%;
+	// grid-template-columns: 1fr;
 	color: white;
 	border: 3px ridge rgb(41, 122, 209);
 	background-color:rgb(20, 82, 147);
 	box-shadow: -3px -2px (rgb(23, 100, 181));
 	box-sizing: border-box;
-	
+	padding-left: 5%;
 	.user
+		height: 50%;
+		display: grid;
+		//4 rows
+		grid-template-rows: 40% 20% 20% 20%;
+		grid-template-columns: 1fr;
+		grid-column-gap: 10px;
+		background-color: rgb(50, 173, 115);
+		// text-align: left;
 		&__avatar
-		span
-			margin-top: 5%;
-			img
-				border-radius: 50%;
-				width: 100px;
-				height: 100px;
+			margin-left: -5%;
+			span
+				margin-top: 5%;
+				img
+					border-radius: 50%;
+					width: 100px;
+					height: 100px;
+					
+		&__nickname,&__phone,&__gender
+			text-align: left;
+			border-bottom: 2px dotted rgb(22, 84, 55);
+			align-items: end
+			padding-top: 20%;
+			font-size: 0.8em;
+
+		// &__phone
+		// 	text-align: left;
+		&__gender
+			text-align: left;
+			border-bottom: none;
