--- a/source/template/chat.pug
+++ b/source/template/chat.pug
@@ -2,6 +2,11 @@ doctype(html)
 html
 	head
 		link( rel="stylesheet" href="styles/main.min.css")
+		script(src="https://code.jquery.com/jquery-3.2.1.min.js")
+		script( src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js")
+		script(src="js/auth.js")
+		script(src="js/unauth.js")
+
 
 	body
 
